simplify welcome screen instructions

--- a/vcweb/experiment/bound/templates/bound/participate.html
+++ b/vcweb/experiment/bound/templates/bound/participate.html
@@ -248,21 +248,22 @@ data-bind='css: { "badge-important": readyParticipants() < (participantCount() /
 </div>
 </script>
 <script type='text/html' id='WELCOME'>
-<h3>Welcome</h3>
-<p class='lead'>
+<div class='panel panel-default'>
+    <div class='panel-heading'>
+        <h3 class='panel-title'>Welcome</h3>
+    </div>
+    <div class='panel-body'>
+    <p>
     The experiment will begin shortly after everyone has been assigned a station and has had time to log in.
-</p>
-<div class='well'>
-    <div class='alert alert-info'>
-    <i class='text-success fa fa-info-circle'></i> Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
+    </p>
+    <p>
+    Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
     the other participants</strong>.
-    </div>
-    <div class='alert alert-info'>
-    <i class='text-success fa fa-info-circle'></i>
-    Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices before the experiment begins.
-    </div>
-    <div>
-    Thank you for your cooperation.
+    </p>
+    <p>
+    Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices
+    before the experiment begins.
+    </p>
     </div>
 </div>
 </script>
