--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -70,18 +70,22 @@
 </div>
 </script>
 <script type='text/html' id='WELCOME'>
-<h3>Welcome</h3>
-<p class='lead'>
-    The experiment will begin shortly after everyone has been assigned a station and has had time to log in.
-</p>
-<div class='well'>
-    <div class='alert alert-info'>
-    <i class='text-success fa fa-info-circle'></i> Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
-    the other participants</strong>.
+<div class='panel panel-default'>
+    <div class='panel-heading'>
+        <h3 class='panel-title'>Welcome</h3>
     </div>
-    <div class='alert alert-info'>
-    <i class='text-success fa fa-info-circle'></i>
-    Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices before the experiment begins.
+    <div class='panel-body'>
+    <p>
+    The experiment will begin shortly after everyone has been assigned a station and has had time to log in.
+    </p>
+    <p>
+    Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
+    the other participants</strong>.
+    </p>
+    <p>
+    Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices
+    before the experiment begins.
+    </p>
     </div>
 </div>
 </script>
