--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block page %}
 <div class='row' id='page'>
-    <div id='content' class='col-md-8'>
+    <div id='content' data-bind='css: contentGridSize'>
         <div data-bind='template: { name: templateId, afterRender: afterRenderTemplate}'></div>
         <div id="progress-modal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -134,7 +134,7 @@
         <thead>
           <tr>
             <th>Current size of forest</th>
-            <th>Maximum possible harvest</th>
+            <th>Your Maximum Possible Harvest</th>
           </tr>
         </thead>
         <tbody>
@@ -207,7 +207,7 @@
     </p>
     <h4>Practice Rounds</h4>
     <p>
-    We will first participate in a practice round so that you can become familiar with the forest task environment and
+    We will do some practice rounds first, so that you can become familiar with the forest task environment and
     understand how to harvest trees.
     </p>
     <p>
@@ -227,7 +227,7 @@
     During each practice round (year), you have unlimited time to indicate how many trees you want to harvest, so that
     you can get used to the controls and become familiar with the information being displayed. During practice, the
     trees you harvest <em>do not count towards your earnings, and they will not affect the other group members</em>.
-    During the actual experiment, you will have <span data-bind='text:roundDuration'></span> seconds each round to
+    During the actual experiment, you will have <span data-bind='text:practiceRoundDuration'></span> seconds each round to
     indicate how many trees you wish to harvest, and the trees you harvest in actual rounds <b>will</b> count towards
     your earnings. </p>
 <h4>Selecting Trees for Harvest</h4>
@@ -245,8 +245,8 @@ you do not select a number of trees within the time allotted, you will be marked
     There are two ways to enter your selection:
 </p>
 <ol>
-    <li>Select the number of trees you want to harvest and then click &quot;Ok, I&39;m ready&quot;. You can 
-    change your selection as many times as you want before clicking, &quot;Ok, I&39;m ready&quot;
+    <li>Select the number of trees you want to harvest and then click &quot;Ok, I'm ready&quot;. You can 
+    change your selection as many times as you want before clicking, &quot;Ok, I'm ready&quot;
     </li>
     <li>Make your selection and then wait the end of the round. The amount you have chosen will be automatically
     submitted. A countdown will alert you when there are 10 seconds left. If you do not select a harvest value, a
@@ -328,26 +328,32 @@ Please raise your hand if you have a question, and the experimenter will come to
 <script type='text/html' id='REGULAR'>
 <div class='row'>
     <div class='col-md-5'>
-        <div class='row'>
         <h3>My Status</h3>
-            <div class='alert alert-warning forestry-status-dashboard col-md-2'>
-                <h4 id="dashboard-last-harvest">Last Harvest <i class='fa fa-info-circle' data-toggle='popover' data-content="The number of trees you harvested last round."></i> </h4>
-                <p>
-                <strong class='text-success'><span data-bind='text:lastHarvestDecision'></span></strong>
-                </p>
-            </div>
-            <div class='alert alert-warning forestry-status-dashboard col-md-2'>
-                <h4 id='dashboard-time'><i class='fa fa-clock-o' data-toggle='popover' data-content="Seconds left before this round ends."></i> Time</h4>
-                <p>
-                <strong data-bind='css: { "text-error": secondsLeft() < warningCountdownTime(), "text-info": secondsLeft() > warningCountdownTime()}'>
-                    <span data-bind='text: secondsLeft'></span>
-                </strong>
-                </p>
-            </div>
-        </div>
     </div>
     <div class='col-md-7'>
         <h3>Group Status</h3>
+    </div>
+</div>
+<div class='row'>
+    <div class='col-md-2'>
+        <div class='alert alert-warning forestry-status-dashboard'>
+            <h4 id="dashboard-last-harvest"><i class='fa fa-info-circle' data-toggle='popover' data-content="The number of trees you harvested last round."></i> Last Harvest</h4>
+            <p><span class='text-success' data-bind='text:lastHarvestDecision'></span></strong></p>
+        </div>
+    </div>
+    <div class='col-md-2'>
+        <div class='alert alert-warning forestry-status-dashboard'>
+            <h4 id='dashboard-time'><i class='fa fa-clock-o' data-toggle='popover' data-content="Seconds left before this round ends."></i> Time</h4>
+            <p>
+            <strong data-bind='css: { "text-error": secondsLeft() < warningCountdownTime(), "text-info": secondsLeft() > warningCountdownTime()}'>
+                <span data-bind='text: secondsLeft'></span>
+            </strong>
+            </p>
+        </div>
+    </div>
+    <div class='col-md-1'>
+    </div>
+    <div class='col-md-7'>
         <table class='table table-bordered table-condensed group-status'>
             <thead>
                 <tr><th>Player</th><th>Last harvest</th><th>Total harvest</th>
@@ -364,9 +370,7 @@ Please raise your hand if you have a question, and the experimenter will come to
     </div>
 </div>
 {% comment %} resource visualization section {% endcomment %}
-<div class='row'>
-    <div class='col-md-12' data-bind='template: { name: "resource-visualization-template" }'></div>
-</div>
+<div data-bind='template: { name: "resource-visualization-template" }'></div>
 {% comment %} resource harvest decision section {% endcomment %}
 <div data-bind='ifnot: isResourceEmpty'>
     <div class='row'>
@@ -381,14 +385,14 @@ Please raise your hand if you have a question, and the experimenter will come to
 </div>
 </script>
 <script type='text/html' id='resource-visualization-template'>
-<div class='row' data-bind='if: isPracticeRound'>
-    <div class='alert alert-danger alert-block'>
+<div data-bind='if: isPracticeRound'>
+    <div class='alert alert-danger'>
         <h4>PRACTICE ROUND</h4>
         This is a practice round.  The decisions you make in this round will <b>NOT</b> contribute to your earnings.
     </div>
 </div>
 <div class='row'>
-    <div>
+    <div class='col-md-12'>
         <h3 class='compact'>My Group</h3>
         <div data-bind='template: { name: "tree-template", data: myGroup }'></div>
     </div>
@@ -866,13 +870,15 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
                 if (chatEnabled) {
                     console.debug("chat was enabled, showing sidebar explicitly");
                     $('#sidebar').show();
-                    $('#content').removeClass('col-md-12').addClass('col-md-8');
                 }
                 else {
                     $('#sidebar').hide();
-                    $('#content').removeClass('col-md-8').addClass('col-md-12');
                 }
             }
+            model.contentGridSize = ko.pureComputed(function() {
+                return model.chatEnabled() ? "col-md-8" : "col-md-12";
+            });
+
             model.afterRenderTemplate = function(elements) {
                 $('[data-content]').popover({placement: 'top', trigger: 'hover'});
             }
